View Issue Details

IDProjectCategoryView StatusLast Update
0032980CommunityOCCT:Data Exchangepublic2024-02-05 03:40
Reporterfrancois_lauzon Assigned Tobugmaster  
PrioritynormalSeveritycrash 
Status verifiedResolutionfixed 
PlatformWindowsOSVC++ 2019 
Product Version7.6.0 
Summary0032980: Data Exchange - STEP import produce a crash
DescriptionWhen I import one of the step file produce by SolidWORKS, the step import crash in StepToTopoDS_TranslateFace::Init() at line 241.
Have a look at the screenshot for more details.

We can't provide the step file, it is private, but if a fix is produce we could test it.

I guess that handling the case when Loop is null should be enough, but I prefer to let OCC expert provide a fix since I don't understand the implication of such a fix.

We also tested the import using CAD Assistant and it didn't crash. We use modifed import variable for step, iges, ... to adjust tolerance and other import/export parameter so that could be the reason why it crash in our application and not CAD Assistant. But whatever the reason there is a crash, I guess we always want to prevent that from occuring.
TagsNo tags attached.
Test case number-

Attached Files

  • Screenshot 2022-05-17 094344.png (126,037 bytes)
  • Screenshot 2022-05-17 094606.png (173,752 bytes)

Activities

kgv

2022-05-17 17:23

developer   ~0108471

> Have a look at the screenshot for more details.
Are some attachments missing?

FrancoisLauzon

2022-05-17 18:25

reporter   ~0108474

Screenshot 2022-05-17 094344.png (126,037 bytes)
Screenshot 2022-05-17 094606.png (173,752 bytes)

FrancoisLauzon

2022-05-17 18:26

reporter   ~0108475

Sorry, I drag the file but forgot to click on Add Note button I think.

git

2024-01-18 16:56

administrator   ~0114928

Branch CR32980 has been created by ichesnokova.

SHA-1: f1b0f43cd56f32043670ca42599b55b7ae46a010


Detailed log of new commits:

Author: ichesnok
Date: Thu Jan 18 13:55:38 2024 +0000

    0032980: Data Exchange - STEP import produce a crash
    
    Fixed

ichesnokova

2024-01-18 18:34

developer   ~0114930

Dear dpasukhi,
please review branch CR32980.
Tests: http://jenkins-test-10.nnov.opencascade.com/view/CR32980-master-ichesnok/view/COMPARE/

ika

2024-01-26 17:14

developer   ~0114988

Dear ichesnokova,

please avoid so short and uninformative commit messages, even if the fix was trivial, put in the message what has been done (Add a check for null...). So please update the commit message and rebase onto the current master, after that, the issue will be ready for the integration.

git

2024-01-30 14:02

administrator   ~0115008

Branch CR32980 has been updated forcibly by ichesnokova.

SHA-1: dec56592ddc4f7748b176c4c13041dd76cc7a532

ichesnokova

2024-01-30 14:05

developer   ~0115009

Dear ika,
commit message changed, please review

ika

2024-01-30 18:10

developer   ~0115012

No more remarks.

Dear bugmaster,
please integrate
OCCT: CR32980

vglukhik

2024-02-05 03:09

administrator   ~0115034

Combination -
OCCT branch : IR-2024-02-02
master SHA - 80705eaf3181f779d6f59bbe0959e1acafb8fc94
d2ef868da4165400c82322bd7f11b652decce47a
Products branch : IR-2024-02-02 SHA - 1138f036bbb2108d18e2649701fcfa8a430bf4e6
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Ubuntu2004-64:
OCCT
Total CPU difference: 17746.459999999875 / 18049.510000000217 [-1.68%]
Products
Total CPU difference: 11492.199999999928 / 11720.99999999989 [-1.95%]
Windows-64-VC142:
OCCT
Total CPU difference: 20148.875 / 21735.421875 [-7.30%]
Products
Total CPU difference: 12625.53125 / 13033.78125 [-3.13%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2024-02-05 03:40

administrator   ~0115039

Branch CR32980 has been deleted by vglukhik.

SHA-1: dec56592ddc4f7748b176c4c13041dd76cc7a532

Related Changesets

occt: master dec56592

2024-01-18 13:55:38

ichesnok

Details Diff
0032980: Data Exchange - STEP import produce a crash

Check on null for loop added
Affected Issues
0032980
mod - src/StepToTopoDS/StepToTopoDS_TranslateFace.cxx Diff File

Issue History

Date Modified Username Field Change
2022-05-17 17:05 francois_lauzon New Issue
2022-05-17 17:05 francois_lauzon Assigned To => gka
2022-05-17 17:20 kgv Summary STEP import produce a crash => Data Exchange - STEP import produce a crash
2022-05-17 17:23 kgv Note Added: 0108471
2022-05-17 18:25 FrancoisLauzon Note Added: 0108474
2022-05-17 18:25 FrancoisLauzon File Added: Screenshot 2022-05-17 094344.png
2022-05-17 18:25 FrancoisLauzon File Added: Screenshot 2022-05-17 094606.png
2022-05-17 18:26 FrancoisLauzon Note Added: 0108475
2024-01-18 14:40 dpasukhi Assigned To gka => ichesnokova
2024-01-18 14:40 dpasukhi Status new => assigned
2024-01-18 16:56 git Note Added: 0114928
2024-01-18 18:34 ichesnokova Assigned To ichesnokova => dpasukhi
2024-01-18 18:34 ichesnokova Status assigned => resolved
2024-01-18 18:34 ichesnokova Note Added: 0114930
2024-01-25 18:30 dpasukhi Assigned To dpasukhi => ika
2024-01-26 17:14 ika Assigned To ika => ichesnokova
2024-01-26 17:14 ika Status resolved => assigned
2024-01-26 17:14 ika Note Added: 0114988
2024-01-30 14:02 git Note Added: 0115008
2024-01-30 14:05 ichesnokova Assigned To ichesnokova => ika
2024-01-30 14:05 ichesnokova Status assigned => resolved
2024-01-30 14:05 ichesnokova Note Added: 0115009
2024-01-30 18:10 ika Assigned To ika => bugmaster
2024-01-30 18:10 ika Status resolved => reviewed
2024-01-30 18:10 ika Note Added: 0115012
2024-02-05 03:09 vglukhik Note Added: 0115034
2024-02-05 03:14 Changeset attached => occt master dec56592
2024-02-05 03:16 vglukhik Status reviewed => verified
2024-02-05 03:16 vglukhik Resolution open => fixed
2024-02-05 03:16 vglukhik Test case number => -
2024-02-05 03:40 git Note Added: 0115039