0032980: Data Exchange - STEP import produce a crash

Check on null for loop added